<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/LeftLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/leftOperand"
            android:layout_width="match_parent"
            android:layout_height="50sp"

            android:hint="@string/leftOperand" />

        <EditText
            android:id="@+id/rightOperand"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:hint="@string/rightOperand" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rightLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/topRightLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/plusButton"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:onClick="displayResult"
                android:text="@string/plusSign" />

            <Button
                android:id="@+id/minusButton"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:onClick="displayResult"
                android:text="@string/minusSign" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottomRightLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/multipleButton"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:onClick="displayResult"
                android:text="@string/asteriskSign" />

            <Button
                android:id="@+id/divideButton"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:onClick="displayResult"
                android:text="@string/slashSign" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
